<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:background="@color/purple"
        android:padding="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ProgressBar
                android:id="@+id/progressBar_details"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="bottom|center"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="217dp"
                android:visibility="gone"/>

            <!--<TextView
                android:id="@+id/school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:background="@color/purple"
                android:paddingBottom="5dp"/>-->

            <LinearLayout
                android:id="@+id/school_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/inner_padding"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/purple">

                <TextView
                    android:id="@+id/overview_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:padding="@dimen/inner_padding"
                    android:background="@color/purple"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="@color/white"/>

                    <ImageButton
                        android:id="@+id/favorite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/purple"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:layout_gravity="center"
                        android:onClick="AddFavorite"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/outer_padding"
                    android:textSize="@dimen/textSizeSubTitle"
                    android:textAppearance="@style/AppTextAppearance"/>
                <TextView
                    android:id="@+id/eligibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple"
                    android:padding="@dimen/inner_padding"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/academics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/school_overview"
                android:padding="@dimen/inner_padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/academics1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple"
                    android:padding="@dimen/inner_padding"
                    android:text="@string/academics"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/academics_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/outer_padding"
                    android:textSize="@dimen/textSizeSubTitle"
                    android:textAppearance="@style/AppTextAppearance"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/academics"
                android:padding="@dimen/inner_padding"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/activities1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activities"
                    android:padding="@dimen/inner_padding"
                    android:background="@color/purple"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/activities_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/outer_padding"
                    android:textSize="@dimen/textSizeSubTitle"
                    android:textAppearance="@style/AppTextAppearance"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/admission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activities"
                android:orientation="vertical"
                android:padding="@dimen/inner_padding">
                <TextView
                    android:id="@+id/admission_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/admission"
                    android:padding="@dimen/inner_padding"
                    android:background="@color/purple"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/admission_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/outer_padding"
                    android:textSize="@dimen/textSizeSubTitle"
                    android:textAppearance="@style/AppTextAppearance"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/performance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/admission"
                android:orientation="vertical"
                android:padding="@dimen/inner_padding">
                <TextView
                    android:id="@+id/performance1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/performance"
                    android:padding="@dimen/inner_padding"
                    android:background="@color/purple"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/performance_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/outer_padding"
                    android:textSize="@dimen/textSizeSubTitle"
                    android:textAppearance="@style/AppTextAppearance"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/school_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/performance"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/school_location"
                    android:background="@color/purple"
                    android:padding="@dimen/inner_padding"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="@color/white"/>

                 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/map_height"
                    tools:context=".view_details.SchoolsDetailsActivity" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/locdir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/school_map"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/performance"
                    android:padding="@dimen/inner_padding"
                    android:background="@color/purple"
                    android:textSize="@dimen/textSizeSubTitle"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/transportation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/inner_padding"
                    android:background="@color/purple"
                    android:textSize="@dimen/textSizeSubTitle"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>